--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -6,10 +6,10 @@
     <artifactId>frontend</artifactId>
 
     <name>frontend</name>
-    <description>The ng2boot frontend project</description>
+    <description>The Kemily frontend project</description>
 
     <parent>
-        <groupId>com.jdriven.ng2boot</groupId>
+        <groupId>kemily.app</groupId>
         <artifactId>parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -22,7 +22,7 @@
                 <version>1.3</version>
 
                 <configuration>
-                    <nodeVersion>v6.10.1</nodeVersion>o
+                    <nodeVersion>v6.10.1</nodeVersion>
                     <npmVersion>4.4.1</npmVersion>
                     <workingDirectory>src/main/frontend</workingDirectory>
                 </configuration>
