--- a/frontend/src/main/frontend/package.json
+++ b/frontend/src/main/frontend/package.json
@@ -6,7 +6,7 @@
     "gulp": "gulp",
     "build": "gulp",
     "test": "gulp test",
-    "prebuild": "npm rebuild node-sass && bower install"
+    "prebuild": "npm rebuild node-sass"
   },
   "devDependencies": {
     "bower": "^1.8.0",
