adding .tmp to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ node_modules/
 frontend/src/main/frontend/node
 frontend/src/main/frontend/node_modules
 frontend/src/main/frontend/dist
+frontend/src/main/frontend/.tmp
+
 
 ## Bower ##
 frontend/src/main/frontend/bower_components
