--- a/frontend/src/main/frontend/bower.json
+++ b/frontend/src/main/frontend/bower.json
@@ -16,7 +16,8 @@
     "jquery": "2.2.4",
     "mobile-detect": "1.3.2",
     "moment": "2.13.0",
-    "perfect-scrollbar": "0.6.11"
+    "perfect-scrollbar": "0.6.11",
+    "ngMask": "angular-mask#^3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
