--- a/frontend/src/main/frontend/bower.json
+++ b/frontend/src/main/frontend/bower.json
@@ -17,7 +17,9 @@
     "mobile-detect": "1.3.2",
     "moment": "2.13.0",
     "perfect-scrollbar": "0.6.11",
-    "ngMask": "angular-mask#^3.1.1"
+    "ngMask": "angular-mask#^3.1.1",
+    "ngCurrencyMask": "ng-currency-mask#^1.0.61",
+    "angular-input-masks": "^2.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
