--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -32,6 +32,17 @@
       <scope>runtime</scope>
     </dependency>
 
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-mail</artifactId>
+	</dependency>
+	
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4</version>
+	</dependency>
+
     <!--
 
 		<dependency>
