--- a/frontend/src/main/frontend/bower.json
+++ b/frontend/src/main/frontend/bower.json
@@ -19,7 +19,10 @@
     "perfect-scrollbar": "0.6.11",
     "ngMask": "angular-mask#^3.1.1",
     "ngCurrencyMask": "ng-currency-mask#^1.0.61",
-    "angular-input-masks": "^2.6.0"
+    "angular-input-masks": "^2.6.0",
+    "file-saver": "^1.3.3",
+    "jspdf": "^1.3.4",
+    "jspdf-autotable": "^2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
