--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,12 @@
       <artifactId>json-path</artifactId>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi</artifactId>
+    	<version>3.17</version>
+	</dependency>
 
   </dependencies>
 
