--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ frontend/src/main/frontend/node_modules
 frontend/src/main/frontend/dist
 frontend/src/main/frontend/.tmp
 
+## Mac OSX ##
+*.DS_Store
+
 ### ConnectionFactory ###
 backend/src/main/java/jdbc/ConnectionFactory.java
 
