installed md-data-table

--- a/frontend/src/main/frontend/package.json
+++ b/frontend/src/main/frontend/package.json
@@ -1,7 +1,9 @@
 {
   "name": "fuse",
   "version": "1.4.3",
-  "dependencies": {},
+  "dependencies": {
+    "angular-material-data-table": "^0.10.10"
+  },
   "scripts": {
     "gulp": "gulp",
     "build": "gulp",
