--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,25 @@ spring.mail.username=testingx99999@gmail.com
 spring.mail.password=testing123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+flyway.baseline-on-migrate=true
+flyway.enabled=true
+flyway.locations=classpath:db/migration
+flyway.schemas= # schemas to update
+flyway.sql-migration-prefix=V
+flyway.sql-migration-separator=__
+flyway.sql-migration-suffix=.sql
+flyway.url=jdbc:postgresql://localhost:5432/ebm_admin
+flyway.user=postgres
+flyway.password=postgres
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url = jdbc:postgresql://localhost:5432/ebm_admin
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+## This is important
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = validate
