--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=testingx99999@gmail.com
 spring.mail.password=testing123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.properties.smtp.ssl.trust = *
+spring.mail.properties.mail.smtp.host = smtp.gmail.com
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.port = 465
 flyway.baseline-on-migrate=true
 flyway.enabled=true
 flyway.locations=classpath:db/migration
@@ -18,6 +24,7 @@ flyway.password=postgres
 spring.datasource.url = jdbc:postgresql://localhost:5432/ebm_admin
 spring.datasource.username = postgres
 spring.datasource.password = postgres
+server.port = 8090
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
