--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -33,9 +33,14 @@
     </dependency>
 
 	<dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-mail</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
 	</dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
 	
 	<dependency>
 	    <groupId>javax.mail</groupId>
