tentativa falha de implementar login c/ token

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,3 +32,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 ## This is important
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = validate
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
