--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,10 +37,6 @@
       <artifactId>spring-boot-starter-mail</artifactId>
 	</dependency>
 
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
 	
 	<dependency>
 	    <groupId>javax.mail</groupId>
@@ -75,7 +71,15 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
       <version>1.5.2.RELEASE</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.7.0</version>
+		</dependency>
   </dependencies>
 
   <properties>
@@ -88,7 +92,7 @@
     <flyway.sqlMigrationSuffix>.sql</flyway.sqlMigrationSuffix>
     <flyway.validateOnMigrate>true</flyway.validateOnMigrate>
     <postgres.driver.version>9.2-1002.jdbc4</postgres.driver.version>
-    <database.url>jdbc:postgresql://localhost:5432/ebm_admin</database.url>
+    <database.url>jdbc:postgresql://localhost:5432/postgres</database.url>
     <database.user>postgres</database.user>
     <databese.password>postgres</databese.password>
   </properties>
