--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -39,6 +39,12 @@
 
 	
 	<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+	
+	<dependency>
 	    <groupId>javax.mail</groupId>
 	    <artifactId>mail</artifactId>
 	    <version>1.4</version>
