Implementado a autorização e geração de token JWT

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -34,4 +34,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = validate
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=60000 
+# ta em milissegundos: 1min para teste
+# mudar para um tempo maior (Ex: 24h, 7 dias)
