--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.7.0</version>
 		</dependency>
+    <dependency>
+    	<groupId>javax.jdo</groupId>
+    	<artifactId>jdo-api</artifactId>
+    	<version>3.0.1</version>
+    </dependency>
   </dependencies>
 
   <properties>
