implementando usuario no novo escopo

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,9 +81,9 @@
     <flyway.sqlMigrationSuffix>.sql</flyway.sqlMigrationSuffix>
     <flyway.validateOnMigrate>true</flyway.validateOnMigrate>
     <postgres.driver.version>9.2-1002.jdbc4</postgres.driver.version>
-    <database.url>jdbc:postgresql://localhost:5432/ebm_admin</database.url>
+    <database.url>jdbc:postgresql://localhost:5432/postgres</database.url>
     <database.user>postgres</database.user>
-    <databese.password>bgxeso2d</databese.password>
+    <databese.password>postgres</databese.password>
   </properties>
 
   <build>
